fixed styles, customised scrollbar

--- a/frontend/styles/bussiness.module.scss
+++ b/frontend/styles/bussiness.module.scss
@@ -26,15 +26,11 @@
 		position: absolute;
 		color: rgba(255, 255, 255, 1);
 		font-weight: 700;
-		font-size: 2.5rem;
+		font-size: 3.25rem;
 		line-height: 4.55rem;
 		transform: translate(-50%, -50%);
 		top: 50%;
 		left: 50%;
-		@media screen and (min-width: 1024px) {
-			font-size: 3.25rem;
-			line-height: 4.55rem;
-		}
 	}
 }
 
@@ -52,8 +48,11 @@
 .select_filters {
 	display: flex;
 	width: 100%;
-	flex-direction: column;
+	flex-direction: row;
 	gap: 1rem;
+	@media screen and (max-width: 420px) {
+		flex-direction: column;
+	}
 	@media screen and (min-width: 1024px) {
 		display: flex;
 		flex-direction: row;
