--- a/frontend/styles/event_details.module.scss
+++ b/frontend/styles/event_details.module.scss
@@ -1,4 +1,4 @@
-.business_header {
+.event_header {
     padding: 0 10% 2rem 10%;
     display: grid;
     row-gap: 2rem;
@@ -7,14 +7,16 @@
     color: rgb(255, 255, 255);
     border-bottom: 1px solid rgba(71, 85, 105, 1);
 
-    @media screen and (max-width: 400px) {
+    @media screen and (max-width: 450px) {
         display: flex;
         flex-direction: column;
         padding-top: 1rem;
+        row-gap: 1rem;
         width: auto;
+        align-items: center;
     }
 
-    @media (min-width: 400px) and (max-width: 768px) {
+    @media (min-width: 450px) and (max-width: 768px) {
         display: flex;
         flex-direction: row;
         justify-content: space-around;
@@ -64,9 +66,6 @@
         color: rgb(255, 255, 255);
         min-width: 30vw;
 
-        @media (min-width: 768px) and (max-width: 1024px) {
-            width: auto;
-        }
         h1 {
             font-size: 1.4rem;
         }
@@ -88,13 +87,10 @@
         display: flex;
         flex-direction: row;
         justify-content: flex-end;
-        @media (max-width: 768px) {
-            grid-area: business-button;
-        }
 
         @media (min-width: 768px) and (max-width: 1024px) {
             width: auto;
-            display: inline-flex;
+            display: flex;
             align-items: end;
             flex-direction: column;
         }
@@ -111,7 +107,7 @@
     }
 }
 
-.business_details {
+.event_details {
     display: grid;
     margin: 3rem 0 3rem 0;
     padding: 0 10%;
@@ -201,7 +197,7 @@
             }
         }
     }
-    .website_link {
+    .business_link {
         grid-area: link;
         display: flex;
         flex-direction: column;
